--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,73 @@ body {
   height: 100%;
   width: 100%;
 }
+
+/*
+==============================================
+hatch
+==============================================
+*/
+.hatch {
+  animation-name: hatch;
+  -webkit-animation-name: hatch;
+
+  animation-duration: 2s;
+  -webkit-animation-duration: 2s;
+
+  animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: ease-in-out;
+
+  transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  -webkit-transform-origin: 50% 100%;
+
+  visibility: visible !important;
+}
+
+@keyframes hatch {
+  0% {
+    transform: rotate(0deg) scale(0.6);
+  }
+  20% {
+    transform: rotate(-2deg) scale(1.55);
+  }
+  35% {
+    transform: rotate(2deg) scale(1.5);
+  }
+  50% {
+    transform: rotate(-2deg) scale(1.5);
+  }
+  65% {
+    transform: rotate(1deg) scale(1.5);
+  }
+  80% {
+    transform: rotate(-1deg) scale(1.5);
+  }
+  100% {
+    transform: rotate(0deg) scale(1.5);
+  }
+}
+
+@-webkit-keyframes hatch {
+  0% {
+    -webkit-transform: rotate(0deg) scale(0.6);
+  }
+  20% {
+    -webkit-transform: rotate(-2deg) scale(1.55);
+  }
+  35% {
+    -webkit-transform: rotate(2deg) scale(1.5);
+  }
+  50% {
+    -webkit-transform: rotate(-2deg) scale(1.5);
+  }
+  65% {
+    -webkit-transform: rotate(1deg) scale(1.5);
+  }
+  80% {
+    -webkit-transform: rotate(-1deg) scale(1.5);
+  }
+  100% {
+    -webkit-transform: rotate(0deg) scale(1.5);
+  }
+}
